--- a/Partial Discharge Analyzer/MainWindow.xaml
+++ b/Partial Discharge Analyzer/MainWindow.xaml
@@ -1,4 +1,5 @@
 ﻿<Window
+        Background="{DynamicResource MainBackground}" Foreground="{DynamicResource MainForeground}"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,28 +7,39 @@
         xmlns:local="clr-namespace:Partial_Discharge_Analyzer"
         xmlns:NetworkInformation="clr-namespace:System.Net.NetworkInformation;assembly=System.Net.NetworkInformation" x:Class="Partial_Discharge_Analyzer.MainWindow"
         mc:Ignorable="d"
-        Title="PDAnalyzer: Partial Discharge Monitoring  &amp; Analysis Tool" Height="450" Width="800" Icon="/img/PD.png">
+        Title="PDAnalyzer: Partial Discharge Monitoring  &amp; Analysis Tool" MinHeight="400" Height="450" Width="800" MinWidth="800" Icon="/img/PD.png">
+ 
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="350*"/>
+            <ColumnDefinition Width="400"/>
             <ColumnDefinition Width="350*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="50*"/>
+            <RowDefinition Height="50"/>
             <RowDefinition Height="350*"/>
         </Grid.RowDefinitions>
 
         <StackPanel Orientation="Horizontal" Margin="5" Grid.Row="0" Grid.Column="0">            
-            <Label x:Name="SelConnType" Content="Connection type:" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.ColumnSpan="1" Margin="10,10,0,0" ToolTip="Select type of connection. Ethernet connection is prioriy"/>
-            <RadioButton x:Name="EthernetRBtn" Content="Ethernet" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Center" IsEnabled="True" IsChecked="True"/>
-            <RadioButton x:Name="USBRBtn" Content="USB" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Center" IsEnabled="True" ToolTip="Not yet implemented"/>
-            <RadioButton x:Name="COMRBtn" Content="COM" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Center" IsEnabled="False" ToolTip="Not yet implemented"/>
+            <Label x:Name="SelConnType" Content="Connection type:" Foreground="{DynamicResource TextColor}" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.ColumnSpan="1" Margin="10,10,0,0" ToolTip="Select type of connection. Ethernet connection is prioriy"/>
+            <RadioButton x:Name="EthernetRBtn" Content="Ethernet" Foreground="{DynamicResource TextColor}" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Center" IsEnabled="True" IsChecked="True"/>
+            <RadioButton x:Name="USBRBtn" Content="USB" Foreground="{DynamicResource TextColor}" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Center" IsEnabled="True" ToolTip="Not yet implemented"/>
+            <RadioButton x:Name="COMRBtn" Content="COM" Foreground="{DynamicResource TextColor}" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Center" IsEnabled="False" ToolTip="Not yet implemented"/>
         </StackPanel>
         
         <StackPanel Orientation="Horizontal" Margin="5" Grid.Row="1" Grid.Column="0">
-            <Label x:Name="SelConnAddr" Content="Connection address:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Grid.ColumnSpan="1"/>
-            <ComboBox x:Name="ConnComboBox" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="150" />
+            <Label x:Name="SelConnAddr" Content="Connection address:" Foreground="{DynamicResource TextColor}" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Grid.ColumnSpan="1"/>
+            <ComboBox x:Name="ConnComboBox" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="150" SelectedIndex="0" />
+            <Button x:Name="AddConnEthernet" Content="Add" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="50" Height="22" />
             <Button x:Name="ConnBtn" Content="Connect" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="76" Height="22"/>
+        </StackPanel>
+
+        <StackPanel Orientation="Vertical" Margin="5" Grid.Row="0" Grid.Column="1" Grid.RowSpan="2">
+            <ComboBox SelectionChanged="ThemeSelector_Changed" Margin="5" Width="100" SelectedItem="Light" SelectedIndex="0">
+                <ComboBoxItem Content="Light"/>
+                <ComboBoxItem Content="Dark"/>
+            </ComboBox>
+            <Label x:Name="SCPIOutput" Content="Output SCPI" Foreground="{DynamicResource TextColor}" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
+            <TextBox x:Name="SCPIOutputTextBox" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,10,0,0" Width="300" Height="200" IsReadOnly="True" TextChanged="SCPIOutputTextBox_TextChanged"/>
         </StackPanel>
 
     </Grid>
