--- a/Partial Discharge Analyzer/MainWindow.xaml
+++ b/Partial Discharge Analyzer/MainWindow.xaml
@@ -39,7 +39,8 @@
 
 
         <StackPanel Orientation="Vertical" Margin="5" Grid.Row="0" Grid.Column="1" Grid.RowSpan="2">
-            <ComboBox SelectionChanged="ThemeSelector_Changed" Margin="5" Width="100" SelectedItem="Light" SelectedIndex="0">
+            <Label x:Name="SelTheme" Content="Select Theme:" Foreground="{DynamicResource TextColor}" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
+            <ComboBox SelectionChanged="ThemeSelector_Changed" Margin="5" Width="100" SelectedItem="Light" SelectedIndex="0" >
                 <ComboBoxItem Content="Light"/>
                 <ComboBoxItem Content="Dark"/>
             </ComboBox>
